// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible component renders correctly in the default case 1`] = `
<div
  className="mt3 mb3 bg-white rounded shadow accordian"
  id={null}
>
  <button
    aria-controls="collapsible-default-render-case"
    aria-expanded={false}
    className="btn btn-collapse block col-12 py2 sm-px3 h3 sm-h2 line-height-1 left-align rounded bg-white blue sticky-header"
    onClick={[Function]}
    type="button"
  >
    <span
      className="right"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f078",
              "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
            ],
            "iconName": "chevron-down",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="sm"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </span>
    default render case
  </button>
  <div
    className="p2 sm-p3 d-none has-sticky-header"
    id="collapsible-default-render-case"
  />
</div>
`;

exports[`Collapsible component renders correctly when open 1`] = `
<div
  className="mt3 mb3 bg-white rounded shadow accordian"
  id={null}
>
  <button
    aria-controls="collapsible-open-render-case"
    aria-expanded={true}
    className="btn btn-collapse block col-12 py2 sm-px3 h3 sm-h2 line-height-1 left-align border-bottom border-bottom-darken-1 rounded-top bg-white blue sticky-header"
    onClick={[Function]}
    type="button"
  >
    <span
      className="right"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f077",
              "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
            ],
            "iconName": "chevron-up",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="sm"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </span>
    open render case
  </button>
  <div
    className="p2 sm-p3  has-sticky-header"
    id="collapsible-open-render-case"
  />
</div>
`;

exports[`Collapsible component sets sticky class if enabled 1`] = `
<div
  className="mt3 mb3 bg-white rounded shadow accordian"
  id={null}
>
  <button
    aria-controls="collapsible-open-render-case"
    aria-expanded={false}
    className="btn btn-collapse block col-12 py2 sm-px3 h3 sm-h2 line-height-1 left-align rounded bg-white blue sticky-header"
    onClick={[Function]}
    type="button"
  >
    <span
      className="right"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f078",
              "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
            ],
            "iconName": "chevron-down",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="sm"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </span>
    open render case
  </button>
  <div
    className="p2 sm-p3 d-none has-sticky-header"
    id="collapsible-open-render-case"
  />
</div>
`;

exports[`Collapsible component toggles from closed to open 1`] = `
<div
  className="mt3 mb3 bg-white rounded shadow accordian"
  id={null}
>
  <button
    aria-controls="collapsible-toggle-to-open-case"
    aria-expanded={true}
    className="btn btn-collapse block col-12 py2 sm-px3 h3 sm-h2 line-height-1 left-align border-bottom border-bottom-darken-1 rounded-top bg-white blue sticky-header"
    onClick={[Function]}
    type="button"
  >
    <span
      className="right"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f077",
              "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
            ],
            "iconName": "chevron-up",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="sm"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </span>
    toggle to open case
  </button>
  <div
    className="p2 sm-p3  has-sticky-header"
    id="collapsible-toggle-to-open-case"
  />
</div>
`;

exports[`Collapsible component toggles from open to closed 1`] = `
<div
  className="mt3 mb3 bg-white rounded shadow accordian"
  id={null}
>
  <button
    aria-controls="collapsible-toggle-to-closed-case"
    aria-expanded={false}
    className="btn btn-collapse block col-12 py2 sm-px3 h3 sm-h2 line-height-1 left-align rounded bg-white blue sticky-header"
    onClick={[Function]}
    type="button"
  >
    <span
      className="right"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f078",
              "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
            ],
            "iconName": "chevron-down",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="sm"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </span>
    toggle to closed case
  </button>
  <div
    className="p2 sm-p3 d-none has-sticky-header"
    id="collapsible-toggle-to-closed-case"
  />
</div>
`;
